--- a/movies/src/App.sass
+++ b/movies/src/App.sass
@@ -156,7 +156,7 @@ $topbarH: 50px
 .movielist
   width: 80%
   margin: 0 auto
-  margin-top: $topbarH + 30px
+  margin-top: 30px
 
 .topbar
   height: $topbarH
@@ -169,6 +169,8 @@ $topbarH: 50px
   // Only working on safari :(
   backdrop-filter: blur(20px)
   -webkit-backdrop-filter: blur(20px)
+
+  display: none
 
 
 .search
