--- a/movies/src/App.sass
+++ b/movies/src/App.sass
@@ -225,6 +225,9 @@ $topbarH: 50px
   .main-container
     margin-left: 0
 
+  .movielist
+    margin-top: $topbarH + 30px
+
   .movie-card
     width: 45%
 
@@ -233,4 +236,5 @@ $topbarH: 50px
 
   .topbar
     box-shadow: 0px 0px 50px -15px $menuBackground
+    display: block
     border-bottom: none
