Load more button
Added a load more button that loads the next 6 movies of the list.

--- a/movies/src/App.sass
+++ b/movies/src/App.sass
@@ -193,6 +193,20 @@ $topbarH: 50px
   @extend .app-title
   display: block
 
+.load-more-button
+  background: none
+  display: block
+  font-size: 1.5em
+  height: 150px
+  width: 150px
+  border: 3px solid $secondaryTextColor
+  color: #fff
+  border-radius: 100%
+  margin: 0 auto
+  margin-bottom: 15px
+  padding: 0px 15px
+  cursor: pointer
+
 // -------------Mobile theme-------------
 
 @media (max-width:950px)
