Chrome button outline
Removed default button outline on Chrome.

--- a/movies/src/App.sass
+++ b/movies/src/App.sass
@@ -25,6 +25,10 @@ a
   color: inherit
   text-decoration: none
 
+button:focus
+  //removes outline for buttons in Chrome
+  outline: 0
+
 // Style for the menu toggler
 :root
   --toggler-size: 20px
@@ -206,6 +210,7 @@ $topbarH: 50px
   margin-bottom: 15px
   padding: 0px 15px
   cursor: pointer
+
 
 // -------------Mobile theme-------------
 
