--- a/movies/src/App.sass
+++ b/movies/src/App.sass
@@ -211,6 +211,10 @@ $topbarH: 50px
   padding: 0px 15px
   cursor: pointer
 
+.end-of-list
+  text-align: center
+  margin: 0px 0px 30px 0px
+  color: #fff
 
 // -------------Mobile theme-------------
 
