--- a/movies/src/App.sass
+++ b/movies/src/App.sass
@@ -152,6 +152,7 @@ button:focus
   border-radius: 12px
   box-shadow: 0px 0px 50px -15px $menuBackground
   object-fit: cover
+  cursor: pointer
   // filter: blur(5px)
 
 .movie-title
@@ -163,6 +164,7 @@ $topbarH: 50px
   width: 80%
   margin: 0 auto
   margin-top: 30px
+  min-height: 100vh
 
 .topbar
   height: $topbarH
@@ -182,7 +184,7 @@ $topbarH: 50px
   // This title should be displayed on mobile only
   text-align: center
   line-height: $topbarH
-  font-size: 1.6em
+  font-size: 2.2em
   display: none
 
 .menu-app-title
