--- a/movies/src/App.sass
+++ b/movies/src/App.sass
@@ -38,7 +38,6 @@ button:focus
   // transition-property: transform, opacity, background
   transition: transform, opacity, background
   transition-duration: .5s, .25s
-  z-index: 50
 
 .menu-toggler__line:nth-child(2)
   top: calc(var(--toggler-size) / 5 * 2)
@@ -69,7 +68,6 @@ button:focus
   top: 15px
   left: 10%
   cursor: pointer
-  z-index: 50
 
 .input-toggler:checked ~ .menu
   transform: translateX(0)
@@ -80,7 +78,6 @@ button:focus
 .App
   position: absolute
   width: 100%
-  // height: 100%
   top: 0
   left: 0
   font-family: 'Open Sans', sans-serif
@@ -91,8 +88,9 @@ button:focus
   position: fixed
   width: 300px
   height: 100vh
-  z-index: 5
+  z-index: 11
   background: $menuBackground
+  box-shadow: 0px 0px 10px 2px $menuBackground
 
   .menu-title
     display: block
@@ -282,13 +280,14 @@ $topbarH: 50px
 @media (max-width:950px)
   .menu-toggler
     display: block
-    z-index: 10
+    z-index: 12
 
   .menu
     width: 100%
     width: var(--sidebar-width)
     transform: translateX(calc(var(--sidebar-width) * -1))
     transition: transform .4s, background-position 1s .6s
+    box-shadow: none
 
     .menu-title
       margin-left: 20%
