--- a/movies/src/details.sass
+++ b/movies/src/details.sass
@@ -47,7 +47,7 @@
 
 .backdrop
   width: 100%
-  height: 50%
+  height: 700px
   position: relative
   background-position: center
   box-shadow: 0px 0px 10px 2px $menuBackground
@@ -92,7 +92,8 @@
     font-size: 2em
 
   .backdrop
-    height: 30%
+    position: relative
+    height: 50%
 
   .movie-details
     padding: 20px 16px
