--- a/movies/src/details.sass
+++ b/movies/src/details.sass
@@ -46,8 +46,7 @@
     transform: rotate(-45deg)
 
 .backdrop
-  width: 100%
-  height: 700px
+  height: 40%
   position: relative
   background-position: center
   box-shadow: 0px 0px 10px 2px $menuBackground
